# doogie_base

./: .gitignore  CMakeLists.txt  README.md  docker-entrypoint.sh  dockerfile  package.xml
doogie_algorithms/: CMakeLists.txt  package.xml  rh_solver_plugin_description.xml  right_hand_solver_plugin_description.xml
doogie_algorithms/astar_solver_plugin/include/doogie_algorithms/astar_solver_plugin/: astar_solver_plugin.hpp
doogie_algorithms/astar_solver_plugin/src/: astar_solver_plugin.cpp
doogie_algorithms/core/: CMakeLists.txt
doogie_algorithms/core/include/doogie_algorithms/: base_solver.hpp  matrix_handle.hpp  mouse_handle.hpp  solver_plugin_loader.hpp
doogie_algorithms/core/src/: base_solver.cpp  matrix_handle.cpp  mouse_handle.cpp  solver_plugin_loader.cpp
doogie_algorithms/include/doogie_algorithms/: base_solver.hpp  solver_plugin_loader.hpp
doogie_algorithms/right_hand_plugin/include/doogie_algorithms/right_hand_plugin/: right_hand.hpp
doogie_algorithms/right_hand_plugin/src/: right_hand.cpp
doogie_algorithms/right_hand_solver_plugin/: CMakeLists.txt  rh_solver_plugin_description.xml
doogie_algorithms/right_hand_solver_plugin/include/doogie_algorithms/rh_solver_plugin/: rh_solver_plugin.hpp
doogie_algorithms/right_hand_solver_plugin/include/doogie_algorithms/right_hand_solver_plugin/: right_hand_solver_plugin.hpp
doogie_algorithms/right_hand_solver_plugin/src/: rh_solver_plugin.cpp  right_hand_solver_plugin.cpp
doogie_algorithms/src/: base_solver.cpp  solver_plugin_loader.cpp
doogie_base/: CMakeLists.txt  package.xml
doogie_control/: CMakeLists.txt  README.md  package.xml
doogie_control/config/: diff_drive_controller.yaml  doogie_move_base_controller.yaml  pid_controller.yaml  wheel_control.yaml
doogie_control/include/doogie_control/: diff_driver_controller.hpp  odom_controller.hpp  pid_controller.hpp
doogie_control/launch/: robot_control.launch
doogie_control/src/: diff_drive_controller.cpp  odom_controller.cpp  pid_controller.cpp
doogie_core/: CMakeLists.txt  package.xml
doogie_core/include/doogie_core/: base_solver.hpp  matrix_handle.hpp  maze_matrix_handle.hpp  mouse_handle.hpp  solver_plugin_loader.hpp  utils.hpp
doogie_core/src/: base_solver.cpp  matrix_handle.cpp  maze_matrix_handle.cpp  mouse_handle.cpp  solver_plugin_loader.cpp  utils.cpp
doogie_description/: .gitignore  README.md  package.xml
doogie_description/config/: mazes.yaml
doogie_description/docs/: doogie.gv
doogie_description/launch/: maze_description.launch  robot_description.launch  robot_display.launch
doogie_description/mazes/: minus.urdf  minus_collision.mtl  minus_collision.stl  minus_visual.dae  minus_visual.mtl  minus_visual_debug.dae  minus_visual_v2.dae
doogie_description/meshes/collada/: base.dae
doogie_description/meshes/stl/: base_link_v2.STL  doogie_collision.stl  ir_sensor_1_link.STL  ir_sensor_2_link.STL
doogie_description/robots/: doogie_real.urdf
doogie_description/rviz/: display.rviz
doogie_description/urdf/: common_properties.xacro  doogie.urdf.xacro  doogie_base.xacro  doogie_sensors.xacro  doogie_wheels.xacro
doogie_description/urdf/acessories/: ir_sensor.xacro
doogie_localization/: CMakeLists.txt  odom_controller_plugin_description.xml  package.xml
doogie_localization/include/doogie_localization/: base_localization.hpp  odom_controller.hpp
doogie_localization/src/: base_localization.cpp  odom_controller.cpp
doogie_msgs/: CMakeLists.txt  README.md  package.xml
doogie_msgs/action/: DoogieMove.action
doogie_msgs/msg/: DoogieOrientation.msg  DoogiePose.msg  DoogiePosition.msg  MazeCell.msg  MazeCellMultiArray.msg
doogie_navigation/: CMakeLists.txt  README.md  package.xml  setup.py
doogie_navigation/config/: maze.yaml  move_base.yaml  move_base.yaml.disabled  solver.yaml
doogie_navigation/include/doogie_navigation/: WallDetector.hpp  doogie_perception.hpp  local_cell.hpp  local_planner.hpp  matrix_handle.hpp  maze_goal.hpp  maze_pose.hpp  mouse_handle.hpp  move_base.hpp  move_base_params.hpp  move_in_maze.hpp  right_hand.hpp
doogie_navigation/launch/: doogie_perception.launch  maze_solver.launch  move_base.launch  move_in_maze.launch
doogie_navigation/scripts/: doogie_perception.py
doogie_navigation/src/: MatrixHandle.cpp  doogie_perception.cpp  doogie_perception_node.cpp  local_cell.cpp  local_planner.cpp  matrix_handle.cpp  maze_goal.cpp  maze_solver_node.cpp  mouse_handle.cpp  move_base.cpp  move_base_node.cpp  move_base_params.cpp  move_in_maze.cpp  move_in_maze_node.cpp  right_hand.cpp  wall_detector.cpp
doogie_navigation/tests/: directions_operation.cpp  fake_odom_publisher.cpp  fake_planner.cpp
doogie_navigation/tests/launch/: fake_planner.launch
doogie_perception/: CMakeLists.txt  README.md  package.xml
doogie_perception/config/: maze.yaml  perception.yaml
doogie_perception/doc/: Doxyfile
doogie_perception/include/doogie_perception/: doogie_perception.hpp
doogie_perception/launch/: doogie_perception.launch
doogie_perception/src/: doogie_perception.cpp  doogie_perception_node.cpp
launch/: description.launch  display.launch  robot_control.launch  robot_description.launch  robot_display.launch
mazes/: minus.dae  minus.urdf  minus_collision.dae  minus_visual.dae
meshes/stl/: ir_sensor_3_link.STL  ir_sensor_4_link.STL  left_wheel.STL  right_wheel.STL
msg/: WallDistances.msg
robots/: doogie_lite.urdf  doogie_sensor.urdf  doogie_xlite_sensor.urdf
rviz/: display.rviz
scripts/: doogie_perception_node.py
src/doogie_perception/: matrixhandle.py
srv/: UpdateMatrix.srv
urdf/: doogie.urdf.xacro  doogie_base.xacro  doogie_sensors.xacro  doogie_wheels.xacro  test.urdf
urdf/acessories/: ir_sensor.xacro
