<?xmle version="1.0"?>
<package format="2">
<name>doogie_algorithms</name>
  <version>0.0.0</version>
  <description>Package for all search algorithms implementation in Doogie Mouse</description>
  
  <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
  <author email="caioaamaral@gmail.com">Caio Amaral</author>
  <author email="elisson_09@hotmail.com">Élisson Oliveira</author>
  
  <url type="repository">https://github.com/Brazilian-Institute-of-Robotics/doogie_base</url>
  <license>Apache-2.0</license>
  
 <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
	<depend>doogie_msgs</depend>
  
  <export>
    <doogie_algorithms plugin="${prefix}/rh_solver_plugin_description.xml"/>
  </export>
  

</package>