<?xml version="1.0"?>
<package format="2">
    <name>doogie_base</name>
    <version>0.8.0</version>
    <description>Metapackage for Doogie Mouse core support </description>

    <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
    <author email="caioaamaral@gmail.com">Caio Amaral</author>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>doogie_control</exec_depend>
    <exec_depend>doogie_description</exec_depend>
    <exec_depend>doogie_msgs</exec_depend>
</package>