<?xml version="1.0"?>
<package format="2">
    <name>doogie_description</name>
    <version>0.8.2</version>
    <description>This package contains Doogie Mouse URDF</description>

    <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
    <author email="caioaamaral@gmail.com">Caio Amaral</author>

    <license>Apache-2.0</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>
</package>