<?xmle version="1.0"?>
<package format="2">
<name>doogie_localization</name>
  <version>0.0.0</version>
  <description>Provides localization capability for Doogie Robot</description>
  
  <author email="caioaamaral@gmail.com">Caio Amaral</author>
  <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
  
  <url type="repository">https://github.com/Brazilian-Institute-of-Robotics/doogie_base</url>
  <license>Apache-2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>angle</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>    
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>    

  <exec_depend>angle</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>
    <doogie_localization plugin="${prefix}/odom_controller_plugin_description.xml"/>
  </export>
  

</package>