<?xml version="1.0"?>
<package format="2">
  <name>doogie_msgs</name>
  <version>0.0.0</version>
  <description>TROS common messages used in the Doogie Mouse robot</description>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
