<?xmle version="1.0"?>
<package format="2">
<name>doogie_navigation</name>
  <version>0.0.0</version>
  <description>Provides velocity commands based on odometry, sensor streams and goal pose</description>
  
  <maintainer email="caioaamaral@gmail.com">Caio Amaral</maintainer>
  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
  <author email="caioaamaral@gmail.com">Caio Amaral</author>
  <author email="elisson_09@hotmail.com">Élisson Oliveira</author>
  
  <url type="repository">https://github.com/Brazilian-Institute-of-Robotics/doogie_control</url>
  <license>Apache-2.0</license>
  
 <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>doogie_msgs</depend>
  <depend>doogie_algorithms</depend>
  <depend>doogie_control</depend>
  <depend>doogie_localization</depend>
  <depend>actionlib</depend>

</package>