set(DOOGIE_SOLVER_LIB_NAME right_hand_solver_plugin)

add_library(${DOOGIE_SOLVER_LIB_NAME}
  src/right_hand_solver_plugin.cpp
)

set_target_properties(${DOOGIE_SOLVER_LIB_NAME} PROPERTIES VERSION "${${PROJECT_NAME}_VERSION}")

target_link_libraries(${DOOGIE_SOLVER_LIB_NAME} ${catkin_LIBRARIES} )

install(TARGETS ${DOOGIE_SOLVER_LIB_NAME}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
)

install(
  DIRECTORY include/${PROJECT_NAME}/
  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
  FILES_MATCHING PATTERN "*.hpp"
  PATTERN "*~" EXCLUDE
)